[package]
name = "hurtbreak-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
hurtbreak-core = { path = "../hurtbreak-core" }
hurtbreak-derive = { path = "../hurtbreak-derive" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[[bin]]
name = "hurtbreak"
path = "src/main.rs"