[package]
name = "hurtbreak-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tcp-fuzzer"
path = "src/main.rs"

[features]
default = ["tcpip", "usb", "async"]
tcpip = ["socket2", "bitflags"]
usb = ["libusb1-sys", "rusb", "bitflags"]
async = ["tokio", "async-trait"]

[dependencies]
hurtbreak-derive = { path = "../hurtbreak-derive" }
fastrand = "2.0"
bitflags = { version = "2.6", optional = true }
anyhow = "1.0"
tokio = { version = "1.0", features = ["net", "time", "rt", "rt-multi-thread", "io-util", "macros"], optional = true }
socket2 = { version = "0.5", optional = true }
async-trait = { version = "0.1.89", optional = true }
libusb1-sys = { version = "0.7", optional = true }
rusb = { version = "0.9", optional = true }
